# lumbus

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  REFACTOR_PLAN.md  build.rs
.github/workflows/: release.yml
docs/: MIGRATION_PLAN.md
examples/: egui_spike.rs  egui_spike_v2.rs  egui_spike_v3.rs  egui_spike_v4.rs  egui_spike_v5.rs
resources/: Credits.rtf  Info.plist  MouseHighlighter.entitlements
resources/icons/: AppIcon.icns  Lumbus_drive.icns  image03.icns  mounted.icns
resources/windows/: resources.rc
scripts/: build-app.sh  build-dmg.sh  build-universal.sh  darken_dmg_background.py  generate-icons.sh  setup-hooks.sh  verify-release.sh
scripts/hooks/: pre-push
src/: lib.rs  macos_main.rs  main.rs  main.sav  main.sav 2025-07-30  main.sav 2025-07-30 bis  main.sav 2025-07-31  mains.sav-2025-03-10  old_main.rs  windows_main.rs
src/app/: helpers.rs  mod.rs
src/events/: bus.rs  global.rs  mod.rs  types.rs
src/ffi/: accessibility.rs  bridge.rs  carbon.rs  cocoa_utils.rs  coretext.rs  mod.rs  types.rs
src/handlers/: dispatcher.rs
src/input/: hotkeys.rs  keyboard_monitors.rs  mod.rs  mouse_monitors.rs  observers.rs
src/model/: app_state.rs  constants.rs  mod.rs  preferences.rs
src/platform/: mod.rs
src/platform/macos/: mod.rs
src/platform/macos/app/: helpers.rs
src/platform/macos/ffi/: accessibility.rs  bridge.rs  carbon.rs  cocoa_utils.rs  coregraphics.rs  mod.rs
src/platform/macos/handlers/: dispatcher.rs  mod.rs
src/platform/macos/input/: hotkeys.rs  keyboard_monitors.rs  mod.rs  mouse_monitors.rs  observers.rs
src/platform/macos/storage/: mod.rs  preferences.rs
src/platform/macos/ui/: mod.rs  status_bar.rs
src/platform/macos/ui/dialogs/: help_overlay.rs  mod.rs  quit_dialog.rs
src/platform/macos/ui/overlay/: drawing.rs  mod.rs  view.rs
src/platform/macos/ui/settings/: mod.rs  window.rs
src/platform/windows/: mod.rs
src/platform/windows/app/: helpers.rs  mod.rs  state.rs
src/platform/windows/ffi/: hotkeys.rs  mod.rs  types.rs
src/platform/windows/handlers/: dispatcher.rs  mod.rs
src/platform/windows/input/: hotkeys.rs  mod.rs
src/platform/windows/storage/: config.rs  mod.rs
src/platform/windows/ui/: mod.rs  tray.rs
src/platform/windows/ui/dialogs/: about_dialog.rs  help_overlay.rs  mod.rs  quit_dialog.rs
src/platform/windows/ui/overlay/: drawing.rs  mod.rs  renderer.rs
src/platform/windows/ui/settings/: mod.rs  window.rs
src/ui/: mod.rs  status_bar.rs
src/ui/dialogs/: help_overlay.rs  mod.rs  quit_dialog.rs
src/ui/overlay/: drawing.rs  mod.rs
src/ui/settings/: mod.rs  window.rs
tests/: helpers.rs  model_tests.rs
