[package]
name = "lumbus"
version = "0.3.2"
authors = ["restevean <restevean@protonmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Highlight the mouse pointer with a configurable circle on macOS"
repository = "https://github.com/restevean/lumbus"
keywords = ["macos", "mouse", "cursor", "highlighter", "presentation"]
categories = ["gui"]

[dependencies]
# Core graphics (not deprecated, keep as-is)
core-graphics = "0.24"

# macOS-specific: objc2 ecosystem (replaces deprecated cocoa/objc/block crates)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "objc2-core-foundation"] }
objc2-core-foundation = "0.3"
block2 = "0.6"

# Kept for spikes/experiments (can be removed after migration complete)
[target.'cfg(target_os = "macos")'.dev-dependencies]
eframe = "0.33"
global-hotkey = "0.7"
raw-window-handle = "0.6"

# Release profile optimizations
[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Link-time optimization
codegen-units = 1        # Better optimization (slower compile)
panic = "abort"          # Smaller binary (no unwinding)
strip = true             # Strip symbols

# Development profile
[profile.dev]
opt-level = 0
debug = true
