[package]
name = "lumbus"
version = "0.3.3"
authors = ["restevean <restevean@protonmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Highlight the mouse pointer with a configurable circle on macOS"
repository = "https://github.com/restevean/lumbus"
keywords = ["macos", "mouse", "cursor", "highlighter", "presentation"]
categories = ["gui"]

[dependencies]
# No cross-platform dependencies currently

# macOS-specific: objc2 ecosystem + core-graphics
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "objc2-core-foundation"] }
objc2-core-foundation = "0.3"
block2 = "0.6"

# Kept for spikes/experiments (can be removed after migration complete)
[target.'cfg(target_os = "macos")'.dev-dependencies]
eframe = "0.33"
global-hotkey = "0.7"
raw-window-handle = "0.6"

# Windows-specific: windows-rs (official Microsoft crate)
[target.'cfg(target_os = "windows")'.dependencies]
windows-numerics = "0.3"
windows = { version = "0.62", features = [
    # Foundation
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    # Window management
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    # Graphics
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Imaging",
    # System tray
    "Win32_UI_Shell",
]}

# For JSON config persistence on Windows
[target.'cfg(target_os = "windows")'.dependencies.serde]
version = "1.0"
features = ["derive"]

[target.'cfg(target_os = "windows")'.dependencies.serde_json]
version = "1.0"

# Release profile optimizations
[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Link-time optimization
codegen-units = 1        # Better optimization (slower compile)
panic = "abort"          # Smaller binary (no unwinding)
strip = true             # Strip symbols

# Development profile
[profile.dev]
opt-level = 0
debug = true
